2004-11-26 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/Makefile.am:  Install the plug-in in
	$(libdir)/mozilla/plugins, not $(prefix)/mozilla/plugins.

2004-11-26 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am:  Added dependencies for documentation
	generation.

2004-11-25 Braden McDaniel  <braden@endoframe.com>

	Fixes for distcheck.

	* configure.ac:  Pass subdir-objects argument to
	AM_INIT_AUTOMAKE; exposed XPIDL and XPIDLFLAGS to the user with
	AC_ARG_VAR.
	* doc/Doxyfile.in:  Updated for Doxygen 1.3.9.1;
	changed SORT_MEMBER_DOCS to NO; changed SHORT_NAMES to YES.
	* doc/Makefile.am:  Make distcheck happy.
	* ide-projects/Makefile.am:  Remove lingering reference to regex
	library.
	* mozilla-plugin/configure.ac:  Convey flags required for xpidl
	as MOZILLA_XPIDLFLAGS; exposed XPIDL and XPIDLFLAGS to the user
	with AC_ARG_VAR.
	* mozilla-plugin/src/Makefile.am:  Use $(libdir)/mozilla/plugins
	as the Mozilla plug-in directory, rather than hard coding the
	value based on mozilla-plugin.pc; invoke xpidl with XPIDLFLAGS.

2004-11-25 Braden McDaniel  <braden@endoframe.com>

	* doc/conformance.doc:  Miscellaneous updates.

2004-11-24 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc
	(gtk_vrml_browser_destroy):  Removed calls to
	gtk_main_iteration.

2004-11-24 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc
	(GtkGLViewer::set_timer):  Fixed crash on plug-in shutdown.

2004-11-23 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc
	(gtk_vrml_browser_destroy):  The browser must be destroyed
	before the viewer.

2004-11-22 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp:  Fixed declaration of
	PluginInstance constructor to throw std::bad_alloc.

2004-11-21 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp:  Removed attempt at factoring